--- a/index.html
+++ b/index.html
@@ -1,1 +1,261 @@
-<h1>Teste</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Exercício 2</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="author" content="Matheus Guedes" />
+		<style>
+			body {
+				margin: 0;
+				box-sizing: border-box;
+				background: rgb(160,160,160);
+				color: white;
+			}
+			.main-content {
+				width: 700px;
+				margin: 0 auto;
+				height: auto;
+				background: #E8EAF6;
+				border-radius: 20px;
+				overflow: hidden;
+				position: relative;
+			}
+			header {
+				display: flex;
+				background: #9FA8DA;
+				position: relative;
+				top: 0;
+				left: 0;
+				width: 100%;
+				padding: 20px 0;
+			}
+			header h1 {
+				margin: 0 auto;
+				font-family: sans-serif;
+				font-size: 33px;
+				letter-spacing: 1px;
+			}
+			section {
+				position: relative;
+				margin-top: 80px;
+				background: #C5CAE9;/*#C5CAE9 #9FA8DA*/
+				padding: 25px;
+				display: flex;
+				flex-direction: column;
+				/*nao colocar width nesse caso, se n, vai ultrapassar a div pai*/
+			}
+			fieldset {
+				display: flex;
+				width: 100%;
+				justify-content: center;
+				align-items: center;
+				border: none;
+				margin: 0;
+				padding: 0;
+			}
+			label {
+				margin: 0 auto;
+				width: 70%;
+				text-align: center;
+				font-size: 25px;
+				font-family: sans-serif;
+				letter-spacing: 1px;
+			}
+			form {
+				display: flex;
+				width: 100%;
+				margin-top: 40px;
+				justify-content: center;
+			}
+			#txtn , #confirmar {
+				width: 150px;
+				height: 100%;
+				padding: 5px;
+				font-size: 17px;
+			} 
+			#txtn {
+				border-radius: 20px;
+				margin: 0;
+				text-align: center;
+				outline: none;
+				border: none;
+				background: #E8EAF6;
+				color: #3F51B5;
+			}
+			#confirmar {
+				margin-left: 70px;
+				border-radius: 20px;
+				border: none;
+				font-weight: bold;
+				color: white;
+				background: #3F51B5;
+			}
+			#res {
+				margin-top: 90px;
+				width: 100%;
+				color: white;
+				border-radius: 20px;
+				overflow: hidden;
+			}
+			#res h2 {
+				margin: 0;
+				text-align: center;
+				font-family: sans-serif;
+				font-size: 25px;
+				font-weight: normal;
+				letter-spacing: 1px;
+			}
+			.res-content {
+				width: 100%;
+				height: 70px;
+				display: flex;
+				justify-content: space-around;
+				margin-top: 40px;
+			}
+			.potencia {
+				width: 70px;
+				height: 70px;
+				background: #E8EAF6;
+				border-radius: 20px;
+				text-align: center;
+				line-height: 70px;
+				font-size: 2em;
+				color: #3F51B5;
+			}
+			#erro {
+				height: 40px;
+				width: 250px;
+				background: tomato;
+				position: absolute;
+				top: 140px;
+				left: 115px;
+				display: none;	
+			}
+			@keyframes erroDrop {
+				0% {
+					transform: translateY(-50px);
+					opacity: 0;
+				} 100% {
+					transform: translateY(0);
+					opacity: 1;
+				}
+			} 
+			#erro.visible {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-weight: bold;
+				font-size: 17px;
+				animation: erroDrop .1s linear;
+			}
+			#erro::before {
+				content:"";
+				height: 0;
+				width: 0;
+				border: 10px solid transparent;
+				border-bottom-color: tomato;
+				position: absolute;
+				top: -20px;
+				left: 50%;
+				transform: translateX(-50%);
+			}
+			
+		</style>
+	</head>
+	<body>
+		<!-- 
+		Exercício 2 – Faça um programa que entre com cinco números e imprima o quadrado de cada número. 
+		
+		APRENDI:
+		Math.floor - arredonda para baixo
+		Math.ceil - arredonda para cima
+		Math.round - >= 5 arredonda para cima, < 5 arredonda para baixo
+		
+		CRIATIVIDADE: 
+		- caso houver menos ou mais numeros d q o esperado, caixa de texto vai balançar
+		-->
+		<div class="main-content">
+			<header>
+				<h1>Sistema de Exponenciação</h1>
+			</header>
+			<section>
+				<fieldset>
+					<label>Informe 5 números</label>
+					<form>
+						<input type="text" id="txtn" autofocus="" placeholder="Ex.: 12345">
+						<input type="button" value="Calcular" id="confirmar">
+					</form>
+				</fieldset>
+
+				<div id="erro"></div>
+
+				<div id="res">
+					<h2>Potência de cada Número</h2>
+					<div class="res-content">
+						<div class="potencia"></div>
+						<div class="potencia"></div>
+						<div class="potencia"></div>
+						<div class="potencia"></div>
+						<div class="potencia"></div>
+					</div>
+				</div>
+			</section>
+		</div>
+
+		<script>
+			function calcular() {
+				const txtn = window.document.getElementById('txtn');
+				const userNumber = Number(txtn.value);
+				const confirmar = window.document.querySelector('#confirm');
+				const tooltip = window.document.getElementById('erro');
+
+				var n1, n2, n3, n4, n5;
+
+				if (userNumber == "" || Number.isNaN(userNumber)) {
+					tooltip.classList.add('visible'); //remove for else
+					tooltip.innerHTML = 'Informe um número válido !';
+				} 
+				else if ((userNumber + "").length < 5 || (userNumber + "").length > 5) {
+					//concatena com "" (string vazia), tornando string.
+					tooltip.classList.add('visible');
+					tooltip.innerHTML = 'Apenas 5 números !';
+				} 
+				else {
+					tooltip.classList.remove('visible');
+
+					var potencias = window.document.getElementsByClassName('potencia');
+					
+					n1 = Math.floor(userNumber / 10000) ** 2;
+					n2 = Math.floor(userNumber / 1000 % 10) ** 2;
+					n3 = Math.floor(userNumber / 100 % 10) ** 2;
+					n4 = Math.floor(userNumber / 10 % 10) ** 2;
+					n5 = Math.floor(userNumber % 10) ** 2;
+
+					for (let i=0; i<potencias.length ; i++) {
+						switch (i) {
+							case 0:
+								potencias[i].innerHTML = n1;
+								break;
+							case 1: 
+								potencias[i].innerHTML = n2;
+								break;
+							case 2: 
+								potencias[i].innerHTML = n3;
+								break;
+							case 3:
+								potencias[i].innerHTML = n4;
+								break;
+							default:
+								potencias[i].innerHTML = n5;
+								break;
+						}
+					}
+				}
+			}
+
+			confirmar.addEventListener("click", calcular);
+		</script>
+	</body>
+</html>
