--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
 				left: 50%;
 				transform: translateX(-50%);
 			}
-			
+			@media query only screen and (max-width: 800px) {
+				.main-content {
+					width: 100%;
+				}
+			}
 		</style>
 	</head>
 	<body>
