--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 			}
 			.main-content {
 				width: 700px;
-				margin: 0 auto;
+				
 				height: auto;
 				background: #E8EAF6;
 				border-radius: 20px;
 				overflow: hidden;
 				position: relative;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%,-50%);
 			}
 			header {
 				display: flex;
