--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				background: #E8EAF6;
 				border-radius: 20px;
 				overflow: hidden;
-				position: relative;
+				position: absolute;
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%,-50%);
